Fix sign in ui flicker

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -242,7 +242,9 @@ button:hover {
   padding: 0 1rem;
   opacity: 0.5;
 }
-.user--available {
+.user--available,
+.user--unavailable {
+  border-radius: 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -250,10 +252,11 @@ button:hover {
   position: relative;
   width: fill;
   min-height: 2rem;
+  max-height: 2rem;
   height: fit-content;
-  min-height: 2rem;
-  z-index: +2;
-  margin: 1rem;
+  z-index: +3;
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 .user--available__text {
@@ -271,10 +274,8 @@ button:hover {
   background-color: hsla(220, 23%, 97%, 1);
 }
 .user--unavailable {
-  position: relative;
-  width: 100%;
-  margin: 1rem;
-  min-height: 2rem;
+  text-align: center;
+  justify-content: center;
 }
 .user--unavailable:hover {
   background-color: hsla(220, 23%, 97%, 1);
@@ -591,6 +592,13 @@ input[type="number"] {
   flex-direction: column;
   justify-content: center;
   width: 100%;
+}
+.wrapper--wh100 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 .wrapper--horizontal {
   display: flex;
